# wagetick

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  uninstall.sh
qml/: main.qml
resources/: AppIcon.icns
scripts/: build-icon.sh  capture-screenshot.sh
src/: UpdateChecker.cpp  UpdateChecker.h  WageTimer.cpp  WageTimer.h  main.cpp
